# atomic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  capacitor.config.ts  docker-compose.yml  fly.toml.example  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker.yml  obsidian-plugin-release.yml  release.yml  test.yml
atomic_sync/: .env.example
crates/atomic-cloud/: Cargo.toml  Dockerfile  docker-compose.yml
crates/atomic-cloud/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/atomic-cloud/frontend/src/: App.tsx  api.ts  styles.css
crates/atomic-cloud/frontend/src/components/: EndpointInfo.tsx  InstanceStatus.tsx
crates/atomic-cloud/frontend/src/pages/: Dashboard.tsx  Landing.tsx  Success.tsx
crates/atomic-cloud/migrations/: 001_initial.sql  006_exclude_failed_from_unique.sql
crates/atomic-cloud/src/: auth.rs  config.rs  db.rs  error.rs  jobs.rs  main.rs  models.rs  state.rs
crates/atomic-cloud/src/clients/: fly.rs  mod.rs  stripe.rs
crates/atomic-cloud/src/routes/: admin.rs  checkout.rs  instances.rs  mod.rs  webhooks.rs
crates/atomic-core/: Cargo.toml
crates/atomic-core/src/: agent.rs  canvas_level.rs  chat.rs  clustering.rs  compaction.rs  db.rs  embedding.rs  executor.rs  extraction.rs  lib.rs  manager.rs  models.rs  search.rs  settings.rs  wiki.rs
crates/atomic-core/src/providers/: mod.rs  models.rs
crates/atomic-core/src/providers/openai_compat/: embedding.rs  llm.rs  mod.rs
crates/atomic-core/src/providers/openrouter/: mod.rs  models.rs
crates/atomic-core/src/storage/: mod.rs  traits.rs
crates/atomic-core/src/storage/postgres/: atoms.rs  briefings.rs  chat.rs  chunks.rs  mod.rs  oauth.rs  search.rs  settings.rs  tags.rs  wiki.rs
crates/atomic-core/src/storage/postgres/migrations/: 003_add_error_columns.sql  005_autotag_target.sql  006_oauth.sql  007_briefings.sql
crates/atomic-core/src/storage/sqlite/: atoms.rs  chunks.rs  clusters.rs  search.rs  tags.rs
crates/atomic-core/src/wiki/: agentic.rs  mod.rs
crates/atomic-core/tests/: storage_tests.rs
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  mcp_auth.rs  state.rs
crates/atomic-server/src/mcp/: mod.rs  server.rs  types.rs
crates/atomic-server/src/routes/: atoms.rs  canvas.rs  embedding.rs  graph.rs  mod.rs  oauth.rs  settings.rs  setup.rs  wiki.rs
crates/atomic-server/tests/: api_atoms.rs
docker/: nginx-fly.conf  nginx.conf  supervisord.conf
docs/: auto-tag-targets.md  obsidian-tag-roundtrip.md  plan-mobile-sharing.md  provider-abstraction-plan.md
mobile/ios/App/App/: Info.plist  MainViewController.swift  SharedConfig.swift
mobile/ios/App/App.xcodeproj/: project.pbxproj
mobile/ios/App/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
obsidian-plugin/: esbuild.config.mjs  manifest.json  package.json  styles.css
obsidian-plugin/src/: atomic-client.ts  main.ts  search-modal.ts  settings.ts  similar-view.ts  sync-engine.ts  sync-state.ts  wiki-view.ts
plugins/obsidian-plugin/: README.md  manifest.json  package-lock.json  package.json  styles.css  vitest.config.ts
plugins/obsidian-plugin/src/: atomic-client.ts  canvas-themes.ts  canvas-view.ts  chat-view.ts  main.ts  onboarding-modal.ts  search-modal.ts  settings.ts  sync-engine.ts  sync-state.ts  wiki-view.ts  ws-client.ts
plugins/obsidian-plugin/tests/: atomic-client.test.ts  onboarding-modal.test.ts  settings.test.ts  setup.ts  sync-engine.test.ts  sync-state.test.ts  ws-client.test.ts
plugins/obsidian-plugin/tests/__mocks__/: obsidian.ts
public/oauth/: openrouter-callback.html
scripts/: build-obsidian-release.js  dev-mobile-ios.js  generate-changelog.js  import-rss.js  scrape-gwern.sh  stress-test-wikipedia.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  commands.rs  db.rs  embedding.rs  extraction.rs  lib.rs  models.rs  settings.rs  wiki.rs
src-tauri/src/providers/: error.rs  mod.rs  models.rs  registry.rs  traits.rs  types.rs
src-tauri/src/providers/openrouter/: embedding.rs  llm.rs  mod.rs
src/components/atoms/: AtomCard.tsx  AtomCardSkeleton.tsx  AtomEditor.tsx  AtomGrid.tsx  AtomList.tsx  AtomReader.tsx  AtomViewer.tsx  FilterSheet.tsx  RelatedAtoms.tsx  index.ts
src/components/canvas/: CanvasContent.tsx  CanvasView.tsx  ClusterBubble.tsx  ConnectionLines.tsx  HierarchicalCanvas.tsx  LocalGraphView.tsx  MiniGraphPreview.tsx  SigmaCanvas.tsx  index.ts  useForceSimulation.ts
src/components/chat/: ChatHeader.tsx  ChatMessage.tsx  ChatView.tsx  ChatViewer.tsx  ConversationsList.tsx  ScopeEditor.tsx
src/components/command-palette/: CommandPalette.tsx  commands.tsx
src/components/layout/: Layout.tsx  LeftPanel.tsx  MainView.tsx  RightDrawer.tsx  index.ts
src/components/onboarding/: OnboardingWizard.tsx  useOnboardingState.ts
src/components/onboarding/steps/: AIProviderStep.tsx  (+2 more)
src/components/search/: SemanticSearch.tsx
src/components/settings/: SettingsButton.tsx  SettingsModal.tsx  index.ts
src/components/tags/: TagChip.tsx  TagNode.tsx  TagSearch.tsx  TagSelector.tsx  TagTree.tsx
src/components/ui/: Button.tsx  ContextMenu.tsx  ErrorBoundary.tsx  FAB.tsx  Input.tsx  LoadingIndicator.tsx  Modal.tsx  ServerConnectionStatus.tsx  index.ts
src/components/wiki/: CitationPopover.tsx  NewWikiModal.tsx  WikiArticleCard.tsx  WikiArticleContent.tsx  WikiArticlesList.tsx  WikiLinkInline.tsx  WikiListViewer.tsx  WikiViewer.tsx  index.ts
src/hooks/: index.ts  useChatEvents.ts  useContainerWidth.ts  useEmbeddingEvents.ts  useFont.ts  useInlineEditor.ts  useTheme.ts
src/lib/: api.ts  codemirror-config.ts  import-apple-notes.ts  openrouter-oauth.ts  reader-editor-bridge.ts  tauri.ts
src/lib/mobile/: shared-config.ts
src/lib/transport/: command-map.ts  http.ts  index.ts
src/router/: RouterBridge.tsx  navigate-ref.ts
src/stores/: atoms.ts  databases.ts  index.ts  settings.ts  tags.ts  ui.ts  wiki.ts
(+2 files in other folders)
