[package]
name = "atomic"
version = "0.6.0"
description = "A note-taking desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "atomic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
regex = "1"
actix-web = "4.9"
actix-cors = "0.7"
async-trait = "0.1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization (slower compile)
strip = true           # Strip symbols to reduce binary size
panic = "abort"        # Smaller binary by removing unwinding code

