[package]
name = "atomic"
version = "0.16.0"
description = "A note-taking desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "atomic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
atomic-core = { path = "../crates/atomic-core" }
serde = { version = "1", features = ["derive"] }
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", features = ["blocking"] }
