[package]
name = "atomic-core"
version = "0.1.0"
edition = "2021"
description = "Core RAG library for Atomic knowledge base"
license = "MIT"

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.6"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tiktoken-rs = "0.6"
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "1"

# For obsidian import
glob = "0.3"
yaml-rust2 = "0.9"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
